fix: add better default tag colors for dark mode

--- a/tesys_tagboard/theme/static_src/src/styles.css
+++ b/tesys_tagboard/theme/static_src/src/styles.css
@@ -11,6 +11,124 @@
   logs: true;
 }
 
+@theme {
+  /* Fonts and Text */
+  --text-sm: 0.8rem;
+  --text-base: 1.0rem;
+  --text-lg: 1.25rem;
+  --text-xl: 1.4rem;
+  --text-2xl: 1.7rem;
+  --text-3xl: 2.2rem;
+  --text-4xl: 2.55rem;
+  --text-5xl: 3.65rem;
+  --font-heading: "Komikula", "Pak Kumis", "Courier New", mono;
+
+  /* Containers */
+  --container-8xl: 96rem;
+
+  /* Colors */
+  --color-discord: #5865F2;
+  --color-discord-content: oklch(0.9162 0 139.549);
+
+
+  /* Keyframes */
+  @keyframes fade_in {
+    0% {
+      opacity: 0;
+    }
+
+    100%: {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fade_out {
+    100% {
+      opacity: 0;
+    }
+  }
+
+  @keyframes flip180 {
+    0% {
+      transform: rotate(0);
+    }
+
+    100% {
+      transform: rotate(-180deg);
+    }
+  }
+
+  @keyframes rot90 {
+    0% {
+      transform: rotate(0);
+    }
+
+    100% {
+      transform: rotate(90deg);
+    }
+  }
+
+  @keyframes rot90_reverse {
+    0% {
+      transform: rotate(90deg);
+    }
+
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes spin_reverse {
+    0% {
+      transform: rotate(0);
+    }
+
+    100% {
+      transform: rotate(-360deg);
+    }
+  }
+
+  @keyframes pop_in {
+    0% {
+      transform: scale(0.7);
+      opacity: 0;
+    }
+
+    75% {
+      transform: scale(1.01);
+      opacity: 0.4;
+    }
+
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+
+  /* Animation */
+  --animate-rot-180: flip180 0.25s linear forwards;
+  --animate-rot-90: rot90 0.25s ease-in-out forwards;
+  --animate-rot-90-cc: rot90_reverse 0.25s ease-in-out forwards;
+  --animate-spin-slow: spin 2s linear infinite;
+  --animate-spin-slow-reverse: spin_reverse 2s linear infinite;
+  --animate-fade-in-slow: fade_in 3s ease-in-out forwards;
+  --animate-fade-in-fast: fade_in 1.5s ease-in-out forwards;
+  --animate-fade-in-very-fast: fade_in 0.4s ease-in-out forwards;
+  --animate-fade-out-slow: fade_out 3s ease-in-out forwards;
+  --animate-fade-out-fast: fade_out 1.5s ease-in-out forwards;
+  --animate-pop-in-fast: pop_in 0.7s ease-in-out forwards;
+}
+
 
 @plugin "daisyui/theme" {
   /* Based on DaisyUI's "winter" theme */
@@ -19,6 +137,7 @@
   prefersdark: false;
   color-scheme: light;
 
+  /* Colors */
   --color-base-100: oklch(100% 0 0);
   --color-base-200: oklch(97.466% 0.011 259.822);
   --color-base-300: oklch(93.268% 0.016 262.751);
@@ -39,6 +158,14 @@
   --color-warning-content: oklch(17.834% 0.009 71.47);
   --color-error: oklch(73.092% 0.11 20.076);
   --color-error-content: oklch(14.618% 0.022 20.076);
+
+  --color-tag-default: #a8e6cf; /* Tag background */
+  --color-tag-content: #383737; /* Tag text */
+  --color-filter-func: #fceb7e; /* Post search filter items background */
+  --color-user: #121212;
+  --color-user-content: #ddd;
+
+
   --radius-selector: 1rem;
   --radius-field: 0.5rem;
   --radius-box: 1rem;
@@ -55,11 +182,11 @@
   prefersdark: true;
   color-scheme: dark;
 
+  /* Colors */
   --color-base-100: oklch(28.822% 0.022 277.508);
   --color-base-200: oklch(26.805% 0.02 277.508);
   --color-base-300: oklch(24.787% 0.019 277.508);
   --color-base-content: oklch(97.747% 0.007 106.545);
-
   --color-primary: oklch(74.202% 0.148 301.883);
   --color-primary: oklch(0.7032 0.146 294.36);
   --color-primary: oklch(0.7388 0.0966 291.18);
@@ -79,6 +206,13 @@
   --color-warning-content: oklch(19.106% 0.026 112.757);
   --color-error: oklch(68.22% 0.206 24.43);
   --color-error-content: oklch(13.644% 0.041 24.43);
+
+  --color-tag-default: oklch(0.3805 0.0399 274.85); /* Tag background */
+  --color-tag-content: oklch(0.8986 0.0014 17.23); /* Tag text */
+  --color-filter-func: #fceb7e; /* Post search filter items background */
+  --color-user: #121212;
+  --color-user-content: #ddd;
+
   --radius-selector: 1rem;
   --radius-field: 0.5rem;
   --radius-box: 1rem;
@@ -177,129 +311,6 @@
       }
     }
   }
-}
-
-@theme {
-  /* Fonts and Text */
-  --text-sm: 0.8rem;
-  --text-base: 1.0rem;
-  --text-lg: 1.25rem;
-  --text-xl: 1.4rem;
-  --text-2xl: 1.7rem;
-  --text-3xl: 2.2rem;
-  --text-4xl: 2.55rem;
-  --text-5xl: 3.65rem;
-  --font-heading: "Komikula", "Pak Kumis", "Courier New", mono;
-
-  /* Containers */
-  --container-8xl: 96rem;
-
-  /* Colors */
-  --color-tag-default: #a8e6cf; /* Tag background */
-  --color-tag-content: #383737; /* Tag text */
-  --color-filter-func: #fceb7e; /* Post search filter items background */
-  --color-user: #121212;
-  --color-user-content: #ddd;
-
-  --color-discord: #5865F2;
-  --color-discord-content: oklch(0.9162 0 139.549);
-
-  /* Keyframes */
-  @keyframes fade_in {
-    0% {
-      opacity: 0;
-    }
-
-    100%: {
-      opacity: 1;
-    }
-  }
-
-  @keyframes fade_out {
-    100% {
-      opacity: 0;
-    }
-  }
-
-  @keyframes flip180 {
-    0% {
-      transform: rotate(0);
-    }
-
-    100% {
-      transform: rotate(-180deg);
-    }
-  }
-
-  @keyframes rot90 {
-    0% {
-      transform: rotate(0);
-    }
-
-    100% {
-      transform: rotate(90deg);
-    }
-  }
-
-  @keyframes rot90_reverse {
-    0% {
-      transform: rotate(90deg);
-    }
-
-    100% {
-      transform: rotate(0deg);
-    }
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
-  @keyframes spin_reverse {
-    0% {
-      transform: rotate(0);
-    }
-
-    100% {
-      transform: rotate(-360deg);
-    }
-  }
-
-  @keyframes pop_in {
-    0% {
-      transform: scale(0.7);
-      opacity: 0;
-    }
-
-    75% {
-      transform: scale(1.01);
-      opacity: 0.4;
-    }
-
-    100% {
-      transform: scale(1);
-      opacity: 1;
-    }
-  }
-
-  /* Animation */
-  --animate-rot-180: flip180 0.25s linear forwards;
-  --animate-rot-90: rot90 0.25s ease-in-out forwards;
-  --animate-rot-90-cc: rot90_reverse 0.25s ease-in-out forwards;
-  --animate-spin-slow: spin 2s linear infinite;
-  --animate-spin-slow-reverse: spin_reverse 2s linear infinite;
-  --animate-fade-in-slow: fade_in 3s ease-in-out forwards;
-  --animate-fade-in-fast: fade_in 1.5s ease-in-out forwards;
-  --animate-fade-in-very-fast: fade_in 0.4s ease-in-out forwards;
-  --animate-fade-out-slow: fade_out 3s ease-in-out forwards;
-  --animate-fade-out-fast: fade_out 1.5s ease-in-out forwards;
-  --animate-pop-in-fast: pop_in 0.7s ease-in-out forwards;
 }
 
 
